// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileActions when user is on personal route and there are externalApps default and external actions should be rendered 1`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon1" alt="Icon for exampleName1 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName1</span></button></li>
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon2" alt="Icon for exampleName2 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName2</span></button></li>
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon3" alt="Icon for exampleName3 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName3</span></button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
</ul>
`;

exports[`FileActions when user is on personal route and there are externalApps default and external actions should be rendered 2`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon1" alt="Icon for exampleName1 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName1</span></button></li>
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon2" alt="Icon for exampleName2 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName2</span></button></li>
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon3" alt="Icon for exampleName3 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName3</span></button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-move-trigger">
      <oc-icon-stub name="move" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Move</span>
      <!---->
    </button></li>
</ul>
`;

exports[`FileActions when user is on personal route and there are externalApps default and external actions should be rendered 3`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon1" alt="Icon for exampleName1 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName1</span></button></li>
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon2" alt="Icon for exampleName2 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName2</span></button></li>
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon3" alt="Icon for exampleName3 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName3</span></button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-markdown-editor-trigger">
      <oc-icon-stub name="markdown-editor" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Open in Markdown Editor</span> <span class="oc-invisible-sr">(Opens in new window)</span>
    </button></li>
</ul>
`;

exports[`FileActions when user is on personal route and there are externalApps default and external actions should be rendered 4`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon1" alt="Icon for exampleName1 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName1</span></button></li>
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon2" alt="Icon for exampleName2 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName2</span></button></li>
  <li class="oc-py-xs"><button class="oc-text-bold oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw"><img src="exampleIcon3" alt="Icon for exampleName3 app" class="oc-icon oc-icon-m"> <span class="oc-files-actions-sidebar-action-label">Open in exampleName3</span></button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-move-trigger">
      <oc-icon-stub name="move" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Move</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-download-trigger">
      <oc-icon-stub name="download" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Download</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-markdown-editor-trigger">
      <oc-icon-stub name="markdown-editor" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Open in Markdown Editor</span> <span class="oc-invisible-sr">(Opens in new window)</span>
    </button></li>
</ul>
`;

exports[`FileActions when user is on personal route and there are no externalApps only default actions should be rendered 1`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
</ul>
`;

exports[`FileActions when user is on personal route and there are no externalApps only default actions should be rendered 2`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-move-trigger">
      <oc-icon-stub name="move" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Move</span>
      <!---->
    </button></li>
</ul>
`;

exports[`FileActions when user is on personal route and there are no externalApps only default actions should be rendered 3`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-markdown-editor-trigger">
      <oc-icon-stub name="markdown-editor" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Open in Markdown Editor</span> <span class="oc-invisible-sr">(Opens in new window)</span>
    </button></li>
</ul>
`;

exports[`FileActions when user is on personal route and there are no externalApps only default actions should be rendered 4`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-move-trigger">
      <oc-icon-stub name="move" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Move</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-download-trigger">
      <oc-icon-stub name="download" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Download</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-markdown-editor-trigger">
      <oc-icon-stub name="markdown-editor" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Open in Markdown Editor</span> <span class="oc-invisible-sr">(Opens in new window)</span>
    </button></li>
</ul>
`;
